--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,11 @@ project(FileTransferServer)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Include directories (if any)
-# include_directories(include)
+# Add executable for the file transfer server
+add_executable(server server.cpp)
 
-# Source files for the upload/download server
-add_executable(file_transfer_server file_transfer_server.cpp)
+# Add executable for the client
+add_executable(client client.cpp)
 
-# Source files for the file list server
+# Add executable for the file list server
 add_executable(file_list_server file_list_server.cpp)
