--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ project(FileTransferServer)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-# Add executable for the file transfer server
-add_executable(server server.cpp)
+# Add executable for the file transfer server, linking delete_file.cpp
+add_executable(server server.cpp delete_file.cpp)
 
 # Add executable for the client
 add_executable(client client.cpp)
